# scf-accessions

./: .gitignore  README.md  accessions.py  pyproject.toml  requirements.txt  settings.template.py
.github/: dependabot.yml
.github/workflows/: dependabot-import-test.yml
