[tool.poetry]
name = "scf-accessions"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pipdeptree = "^2.25.0"
chardet = "^5.2.0"
entrypoints = "0.4"
fqdn = "^1.5.1"
isoduration = "^20.11.0"
jsonpointer = "^3.0.0"
jupyter = "^1.1.1"
qtconsole = "^5.6.1"
pyparsing = "^3.2.1"
pyrsistent = "^0.20.0"
requests = "^2.32.3"
setuptools = "^80.3.1"
testpath = "^0.6.0"
uri-template = "^1.3.0"
webcolors = "^24.11.1"
wheel = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
